Fixed list scrolling on mobile home page

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -428,7 +428,7 @@
 	width: 350px;
 	@include mq-xsmall-max {
 		width: 100%;
-		overflow: auto;
+		overflow: visible;
 		max-height: auto;
 		height: auto;
 	}
